tests/typing/bad/testfile-mod2-1.scala
class A { def m() { var x: Int = 1 % true } }
object Main { def main(args: Array[String]) { } }
